--- a/MetroUIPrueba2/Views/Empleado/View.cshtml
+++ b/MetroUIPrueba2/Views/Empleado/View.cshtml
@@ -1,4 +1,8 @@
-﻿<style>
+﻿@{
+    ViewBag.Title = "Intranet";
+    Layout = "~/Views/Shared/_IntranetLayout.cshtml";
+}
+<style>
     #principal {
         width: 800px;
         height: 750px;
@@ -28,7 +32,7 @@
 <div class="user_session">
     <h6>Usuario: Juan Perez</h6>
 </div>
-
+@model MetroUIPrueba2.Models.Empleado
 <div class="container" id="principal">
     <div class="div-img"><img style="width:50px; height:50px;" src="~/pics/intranet/lupa.png"></div>
     <h3>Ver Empleado</h3>
@@ -37,18 +41,37 @@
         <div class="row mb-2">
             <label class="cell-sm-3">Rut:</label>
             <div class="cell-sm-9">
-                <input type="text" value="14.876.789-1" data-role="input"
+                <input type="text" value="@Model.Rut" data-role="input"
                        class="mb-1"
                        data-prepend="<span class='mif-indent-increase'></span>"
                        readonly>
             </div>
         </div>
-     
+
+        <div class="row mb-2">
+            <label class="cell-sm-3">Nombre:</label>
+            <div class="cell-sm-9">
+                <input type="text" value="@Model.Nombres" data-role="input"
+                       class="mb-1"
+                       data-prepend="<span class='mif-steps'></span>"
+                       readonly>
+            </div>
+        </div>
+
+        <div class="row mb-2">
+            <label class="cell-sm-3">Apellidos:</label>
+            <div class="cell-sm-9">
+                <input type="text" value="@Model.Apellidos" data-role="input"
+                       class="mb-1"
+                       data-prepend="<span class='mif-steps'></span>"
+                       readonly>
+            </div>
+        </div>
 
         <div class="row mb-2">
             <label class="cell-sm-3">Dirección:</label>
             <div class="cell-sm-9">
-                <input type="text" value="Anibal Pinto # 345" data-role="input"
+                <input type="text" value="@Model.Direccion" data-role="input"
                        class="mb-1"
                        data-prepend="<span class='mif-steps'></span>"
                        readonly>
@@ -58,7 +81,7 @@
         <div class="row mb-2">
             <label class="cell-sm-3">Teléfono:</label>
             <div class="cell-sm-4">
-                <input type="text" value="+56 9 67453222" data-role="input"
+                <input type="text" value="@Model.Telefono" data-role="input"
                        class="mb-1"
                        data-prepend="<span class='mif-phone'></span>"
                        readonly>
@@ -67,7 +90,7 @@
         <div class="row mb-2">
             <label class="cell-sm-3">Email:</label>
             <div class="cell-sm-9">
-                <input type="email" value="jcarlos.Fernandezm@email.com" data-role="input"
+                <input type="email" value="@Model.Correo" data-role="input"
                        class="mb-1"
                        data-prepend="<span class='mif-envelop'></span>"
                        readonly>
@@ -76,30 +99,13 @@
         <div class="row mb-2">
             <label class="cell-sm-3">Cargo:</label>
             <div class="cell-sm-6">
-                <input type="text" value="Supervisor" data-role="input"
+                <input type="text" value="@Model.Cargo" data-role="input"
                        class="mb-1"
                        data-prepend="<span class='mif-tree'></span>"
                        readonly>
             </div>
         </div>
-        <div class="row mb-2">
-            <label class="cell-sm-3">Remuneración:</label>
-            <div class="cell-sm-6">
-                <input type="text" value="$ 850.000" data-role="input"
-                       class="mb-1"
-                       data-prepend="<span class='mif-dollar2'></span>"
-                       readonly>
-            </div>
-        </div>
-        <div class="row mb-2">
-            <label class="cell-sm-3">Previsión:</label>
-            <div class="cell-sm-6">
-                <input type="text" value="Isapre MasVida" data-role="input"
-                       class="mb-1"
-                       data-prepend="<span class='mif-ambulance'></span>"
-                       readonly>
-            </div>
-        </div>
+      
     </form>
 
 </div>
