--- a/MetroUIPrueba2/Areas/Produccion/Views/Recurso/Edit.cshtml
+++ b/MetroUIPrueba2/Areas/Produccion/Views/Recurso/Edit.cshtml
@@ -17,26 +17,28 @@
         position: relative;
     }
 </style>
-
+@Html.ValidationSummary()
 <div class="container" id="principal">
     <h3>Editar Recurso</h3>
     <hr />
-    <form class="bg-white p-6 mx-auto border bd-default win-shadow">
+    <form class="bg-white p-6 mx-auto border bd-default win-shadow" method="POST" action="@Url.Action("Edit","Recurso", new { id = Model.Id })">
         <table>
-            <tr><td style="padding-right:15px;">Descripción:</td>
-            <td style="padding:10px;"><input style="width:400px;" type="text" value="@Model.Descripcion" data-role="input" data-append="" class="input-lg"></td></tr>
+            <tr>
+                <td style="padding-right:15px;">Descripción:</td>
+                <td style="padding:10px;"><input style="width:400px;" type="text" value="@Model.Descripcion" name="Descripcion" data-role="input" data-append="" class="input-lg"></td>
+            </tr>
             <tr>
 
             <tr>
                 <td style="padding-right:15px;">UMedida</td>
                 <td style="padding:10px;">
-                    <input style="width:400px;" type="text" value="@Model.Umedida" data-role="input" data-append="" class="input-lg">
-                </td>          
-            </tr>           
+                    <input style="width:400px;" type="text" value="@Model.Umedida" name="UMedida" data-role="input" data-append="" class="input-lg">
+                </td>
+            </tr>
         </table><br />
         <div class="form-group">
             <button type="submit" class="button success">Actualizar</button>
-            <input type="button" class="button" value="Cancel">
+            <input  type="button" class="button" value="Cancel">
         </div>
 
     </form>
